# ZOLana

./: .gitignore  Cargo.toml  DEPLOYMENT_COMPLETE.md  README.md  ZOLANA_PROJECT_SUMMARY.md  package.json
backpack-master/: README.md
build-aux/: README.md
dark/: README.md
dark-protocol/: Anchor.toml  Anchor.toml.bak  CLIENT_IMPLEMENTATION.md  Cargo.toml  DEPLOYMENT.md  IMPLEMENTATION_COMPLETE.md  JUPITER_INTEGRATION.md  MAINNET_DEPLOYMENT_CHECKLIST.md  NOTEBOOKLM_PRESENTATION_GUIDE.md  README.md  SECURITY_AUDIT_PREP.md  package.json  pnpm-lock.yaml
dark-protocol/archive/: BETA_TESTING_PROGRAM.md  COMPLETE_FULLSTACK_GUIDE.md  DARK_PROTOCOL_ARCHITECTURE.md  IMPLEMENTATION_ROADMAP.md
dark-protocol/client/: README.md  package.json
dark-protocol/client/src/components/: AIAgentManager.tsx  DarkSwap.example.tsx  DarkSwap.tsx  PrivateSwapButton.tsx  PrivateTransferButton.tsx  README.md  ShieldTokensButton.tsx  UnshieldTokensButton.tsx  index.ts
dark-protocol/client/src/components/wallet/: ShieldTokensButton.tsx  UnshieldTokensButton.tsx
dark-protocol/evm-verifier/: README.md
dark-protocol/evm-verifier/cache/: solidity-files-cache.json  test-failures
dark-protocol/evm-verifier/scripts/: intent-proof.mjs  sign-intent-proof.mjs  submit-intent-proof.mjs
dark-protocol/evm-verifier/src/: ZolanaPrivatePaymentVerifier.sol
dark-protocol/evm-verifier/test/: ZolanaPrivatePaymentVerifier.t.sol
dark-protocol/evm-verifier/test-js/: sign-intent-proof.test.mjs  submit-intent-proof.test.mjs
dark-protocol/programs/dark-protocol/: Cargo.toml
dark-protocol/programs/dark-protocol/src/: errors.rs  lib.rs  state.rs
dark-protocol/programs/dark-protocol/src/crypto/: commitment.rs  encryption.rs  groth16.rs  merkle.rs  mod.rs  note_encryption.rs  nullifier.rs  sapling.rs  sapling_v2.rs  zk_proof.rs
dark-protocol/programs/dark-protocol/src/instructions/: ai_agent.rs  mod.rs  privacy_pool.rs  private_swap.rs  private_transfer.rs  shield.rs  shielded_address.rs  unshield.rs
dark-protocol/programs/dark-protocol/src/integrations/: jupiter.rs
dark-protocol/programs/dark-protocol/src/zcash/: mod.rs  note_encryption.rs  prf.rs  sapling.rs  zip32.rs
dark-protocol/programs/shielded-wallet/: Cargo.toml
dark-protocol/programs/shielded-wallet/src/: lib.rs
dark-protocol/rail-worker/: README.md  package.json
dark-protocol/rail-worker/src/: server.mjs  worker.mjs
dark-protocol/rail-worker/test/: worker.test.mjs
dark-protocol/scripts/: deploy-devnet.sh
dark-protocol/sdk/typescript/: README.md  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
dark-protocol/sdk/typescript/examples/: dark-swap-example.ts  jupiter-ultra-example.ts
dark-protocol/sdk/typescript/src/: ai-agent.ts  client.ts  config.ts  helius-dev-tools.ts  index.ts  intent.ts  jupiter-swap.ts  note-encryption.ts  privacy.ts  private-payment.ts  rail-authorization.ts  sapling.ts  swap.ts  types.ts  wallet.ts
dark-wallet/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
dark-wallet/src/: App.css  App.tsx  index.css  vite-env.d.ts
dark-wallet/src/components/: Dashboard.tsx  HeliusViz.tsx
dark-wallet/src/contexts/: WalletProvider.tsx
dark-wallet/src/sdk/: dark-protocol.ts  private-payment.ts  rail-authorization.ts  rail-worker-client.ts  shielded-ledger.ts
dark-wallet/src/utils/: paper-wallet.ts  (+2 more)
dark/dark-agent/: README.md
dark/dark-defi/: README.md
dark/dark-swap/: README.md
dark/dark-wallet/: README.md
darkswap/: README.md
darkswap/jupiter-core-example-main/: README.md  package-lock.json  package.json
darkswap/jupiter-quote-api-node-main/: package-lock.json  package.json
darkswap/jupiter-swap-api-client-main/: README.md
doc/: README.md
helius-sdk-main/: package.json  pnpm-lock.yaml
jupiter-amm-implementation-main/: README.md
paper/web/: README.md
share/: README.md
src/: README.md  clientversion.cpp
test/: README.md
zcutil/: README.md
(+6 files in other folders)
