[package]
name = "dark-protocol"
version = "0.1.0"
description = "Dark Protocol - Privacy-First Solana Wallet with Zcash-style Privacy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dark_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["no-idl"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }

# Cryptography dependencies for Zcash privacy
blake2b_simd = "1.0"
blake2 = "0.10"
chacha20poly1305 = "0.9"
sha2 = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }
curve25519-dalek = { workspace = true }

# Arkworks ZK proof dependencies
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }

# Serialization
borsh = { workspace = true }
bytemuck = "1.14"
bs58 = { workspace = true }

[dev-dependencies]
solana-sdk = { workspace = true }
